--- a/css/home.css
+++ b/css/home.css
@@ -165,6 +165,7 @@
   transition: all .15s ease;
 }
 
+/* This does not work for some other reason */
 .card:hover{
   cursor: pointer;
   transform: scale(1.03);
@@ -415,9 +416,10 @@
   animation: 1.5s ease .9s 1 translate-right forwards;
 }
 
-.card--layout:hover{
-  /* animation: 8s linear 0s gradient infinite forwards; */
-}
+/* This generates a bug for some reason */
+/* .card--layout:hover{
+  animation: 8s linear 0s gradient infinite forwards;
+} */
 
 .card--layout img{
   width: 70%;
@@ -428,33 +430,142 @@
   transform: scale(0.9);
 }
 
-/* For Mobile devices: 320px-480px.
+/* 
+
+Reference:
+
+For Mobile devices: 320px-480px.
 For Tablets or iPad: 480px - 768px.
 For Laptop or small-size screen: 768px -1024px.
 For Desktop or large-size screen: 1024px -1200px.
 For Extra-large size device: 1200px and more */
 
-/* @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) and (max-width: 1360px) {
+  .card--title h1{
+    font-size: var(--bigger-font-size);
+  }
 
-}
+  .card--title p{
+    top: 6rem;
+  }
 
-@media screen and (min-width: 1024px) and (max-width: 1199px) {
-  
+  .card--start h3{
+    font-size: calc(var(--normal-font-size)*1.2);
+  }
+
+  .card--mobile img:nth-child(1){
+    width: 80%;
+  }
+
+  .card--mobile img:nth-child(2){
+    width: 20%;
+  }
+
+  .card--collapse img{
+    width: 80%;
+  }
+
+  .card--colors img{
+    width: 80%;
+  }
+
+  .card--layout img{
+    width: 90%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  
+
+  .diagonal-box{
+    left: -55rem;
+  }
+
+  .card--title h1{
+    font-size: var(--bigger-font-size);
+  }
+
+  .card--title p{
+    top: 6rem; /* Needed */
+  }
+
+  .card--start h3{
+    font-size: var(--normal-font-size);
+  }
+
+  .card--layout img{
+    width: 40%;
+  }
+
+  .section-grid{
+    padding: var(--mb-7) var(--mb-1);
+    margin-bottom: var(--mb-5);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 2fr repeat(7, 1fr);
+    grid-template-areas: ". ."
+                         "title title"
+                         "start resize"
+                         "start mobile"
+                         "collapse mobile"
+                         "colors colors"
+                         "layout layout"
+                         ". .";
+  }
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
-  
-} */
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+  .diagonal-box{
+    left: -30rem;
+  }
+
+  .card--title h1{
+    font-size: var(--bigger-font-size);
+  }
+
+  .card--title p{
+    top: 6rem; /* Needed */
+    font-size: var(--small-font-size);
+  }
+
+  .card--start h3{
+    font-size: var(--normal-font-size);
+  }
+
+  .card--mobile img:nth-child(1){
+    min-width: 100px;
+  }
+
+  .card--mobile img:nth-child(2){
+    min-width: 30px;
+  }
+
+  .card--layout img{
+    width: 50%;
+  }
+
+  .section-grid{
+    padding: var(--mb-7) var(--mb-1);
+    margin-bottom: var(--mb-5);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 2fr repeat(7, 1fr);
+    grid-template-areas: ". ."
+                         "title title"
+                         "start start"
+                         "resize mobile"
+                         "collapse mobile"
+                         "colors colors"
+                         "layout layout"
+                         ". .";
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
 
   .diagonal-box{
     left: -20rem;
   }
+
+  
 
   .section-grid{
     padding: var(--mb-5) var(--mb-1);
