--- a/css/root.css
+++ b/css/root.css
@@ -15,11 +15,8 @@
   --normal-font-size: 1rem;
   --medium-font-size: 1.5rem;
   --big-font-size: 2rem;
+  --bigger-font-size: 4rem;
   --title-font-size: 7rem;
-  
-  --body-font: 'Montserrat', Arial;
-  --second-font: 'Akira Super', Arial;
-  --third-font: 'Akira Expanded';
 
   --default-border-radius: 10px;
 
@@ -84,7 +81,6 @@ body{
   position: relative;
   min-height: var(--min-body-height);
   scroll-behavior: smooth;
-  padding-bottom: var(--mb-3);
 }
 
 button{
