--- a/css/navBar.css
+++ b/css/navBar.css
@@ -88,9 +88,10 @@
 
 .nav__close{
   position: absolute;
-  top: 1rem;
+  top: 2rem;
   right: 3rem;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
+  font-weight: 600;
   color: var(--main-font-color);
   cursor: pointer;
 }
