--- a/css/root.css
+++ b/css/root.css
@@ -111,33 +111,10 @@ button{
   display: flex;
 }
 
-
-/* Global useful animation */
-
-.scale-up{
-  transform: scale(1);
-  transition: all .5s;
+.underline{
+  text-decoration: underline;
 }
 
-.scale-up:hover{
-  transform: scale(1.03);
-}
-
-
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.hidden{
+  display: none;
 }
