--- a/css/navBar.css
+++ b/css/navBar.css
@@ -8,7 +8,6 @@
   z-index: var(--z-top);
 }
 
-
 .nav{
   height: var(--header-height);
   display: flex;
@@ -43,30 +42,25 @@
   opacity: 0;
 }
 
-.overlay{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #363639;
-  backdrop-filter: blur(5px);
-  z-index: 5;
-  opacity: .5;
-  transition: all 1s;
-}
-
 @media screen and (max-width: 1023px){
   .nav__menu{
     position: fixed;
-    background-color: var(--palid-white);
-    backdrop-filter: blur(5px);
     top: 0;
     right: -100%;
     width: 100%;
     height: 100%;
     transition: right .3s;
-    z-index: var(--z-fixed);
+    z-index: var(--z-top);
+    font-size: 2rem;
+    background-color: rgba(0, 0, 0, 0.95)
+  }
+
+  .nav__item .nav__link{
+    color: var(--palid-white);
+  }
+
+  .nav__item .nav__link:active{
+    text-decoration: underline;
   }
 }
 
@@ -83,7 +77,14 @@
 
 .nav__link{
   color: var(--main-font-color);
+  padding: 0 var(--mb-1);
   transition: color .3s;
+}
+
+
+
+.active{
+  border-bottom: 2px solid var(--palid-white);
 }
 
 .nav__close{
@@ -92,13 +93,13 @@
   right: 3rem;
   font-size: 1.7rem;
   font-weight: 600;
-  color: var(--main-font-color);
+  color: var(--second-font-color);
   cursor: pointer;
 }
 
 .nav__button{
   position: relative;
-  background: transparent;
+  background-color: var(--palid-white);
   padding: 1rem 2rem;
   color: var(--main-font-color);
   border-radius: .5rem;
@@ -115,7 +116,7 @@
 
   .nav__button{
     color: var(--main-font-color);
-    background-color: #ffffff;
+    background-color: var(--palid-white);
   }
 }
 
@@ -138,7 +139,7 @@
     flex-direction: row;
     padding: 0;
     align-items: center;
-    column-gap: 4rem;
+    column-gap: 1rem;
   }
 
   .overlay{
