fix background bar problems

--- a/css/home.css
+++ b/css/home.css
@@ -133,7 +133,7 @@
 }
 
 .diagonal-box{
-  position: absolute;
+  position: fixed;
   background-image: url('../assets/img/backgroundGradient-1.jpg');
   left: -90rem;
   right: 0;
