--- a/css/notes.css
+++ b/css/notes.css
@@ -5,7 +5,6 @@
   min-height: var(--min-body-height);
   flex-direction: column;
   /* align-items: center; */
-  gap: var(--mb-2);
 }
 
 
@@ -13,7 +12,7 @@
 
 .search-bar{
   position: fixed;
-  width: 100%;  
+  width: 100%;
   height: 10%;
   gap: var(--mb-1);
   justify-content: center;
@@ -59,8 +58,9 @@
 .notes-section__container{
   /* height: 100%; */
   /* padding: 0 var(--mb-5); */
-  margin-top: 7rem;
-  margin-bottom: var(--mb-5);
+  margin: 7rem auto; /** This is the only thing needed to center */
+  /* margin-top: 7rem;
+  margin-bottom: var(--mb-5); */
 }
 
 /* Notes */
