--- a/css/notes.css
+++ b/css/notes.css
@@ -1,7 +1,6 @@
 
 
 .notes-section{
-  margin-top: 43px; /* Perfect for the search bar */
   min-height: var(--min-body-height);
   flex-direction: column;
   /* align-items: center; */
@@ -12,6 +11,7 @@
 
 .search-bar{
   position: fixed;
+  top: var(--header-height);
   width: 100%;
   height: 10%;
   gap: var(--mb-1);
@@ -58,7 +58,7 @@
 .notes-section__container{
   /* height: 100%; */
   /* padding: 0 var(--mb-5); */
-  margin: 7rem auto; /** This is the only thing needed to center */
+  margin: 8rem auto; /** This is the only thing needed to center */
   /* margin-top: 7rem;
   margin-bottom: var(--mb-5); */
 }
