--- a/css/wall.css
+++ b/css/wall.css
@@ -1,14 +1,14 @@
 .wall-section{
-  margin-top: 120px; /* Perfect for the search bar */
   min-height: var(--min-body-height);
 }
 
 .items-bar{
   position: fixed;
+  top: calc(var(--header-height)*1.17); /* Perfect for navbar */
   width: 100%;
   height: 10%;
   gap: var(--mb-1);
-  padding: 0 auto;
+  padding: 0 var(--mb-5);
   align-items: center;
   background-color: white;
   border-top: 1px solid var(--palid-white);
@@ -18,4 +18,63 @@
 
 .items-bar__list{
   gap: var(--mb-1);
+}
+
+.items-item{
+  opacity: .5;
+  font-weight: 500;
+  transition: all .15s ease;
+}
+
+.items-item:hover{
+  cursor: pointer;
+  opacity: 1;
+}
+
+.wall-container{
+  margin-top: 8rem;
+  padding: var(--mb-5);
+}
+
+.wall-container h1{
+  font-size: var(--big-font-size);
+}
+
+.wall-container h1,h2,h3,h4,h5,h6, p{
+  display: inline-flex;
+}
+
+.wall-container *:focus{
+  outline: none;
+}
+
+.tooltip{
+  display: inline-block;
+  text-align: center;
+  margin-left: var(--mb-1);
+  opacity: 0;
+  font-size: inherit;
+  padding: 0 var(--mb-1);
+  font-weight: 500;
+  background-color: var(--palid-white);
+  color: rgba(0, 0, 0, .5);
+  border-radius: 10px;
+}
+
+.wall-element:hover .tooltip{
+  cursor: pointer;
+  opacity: 1;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 1023px) {
+  .items-bar{
+    padding: 0 var(--mb-3);
+    top: var(--header-height);
+  }
+
+  .wall-container{
+    padding: var(--mb-5) var(--mb-3);
+  }
 }
