--- a/css/notes.css
+++ b/css/notes.css
@@ -11,7 +11,7 @@
 
 .search-bar{
   position: fixed;
-  top: var(--header-height);
+  top: calc(var(--header-height)*1.17);
   width: 100%;
   height: 10%;
   gap: var(--mb-1);
@@ -58,9 +58,9 @@
 .notes-section__container{
   /* height: 100%; */
   /* padding: 0 var(--mb-5); */
-  margin: 8rem auto; /** This is the only thing needed to center */
-  /* margin-top: 7rem;
-  margin-bottom: var(--mb-5); */
+  margin: 10rem auto; /** This is the only thing needed to center */
+
+  /* margin-bottom: var(--mb-5); */
 }
 
 /* Notes */
@@ -127,6 +127,7 @@
 
   .search-bar{
     padding: 0 var(--mb-1);
+    top: var(--header-height);
   }
 
   .search-bar input{
@@ -138,7 +139,7 @@
   }
 
   .notes-section__container{
-    padding: 0 var(--mb-1);
+    margin: 7rem auto;
   }
 
   .note{
