--- a/css/wall.css
+++ b/css/wall.css
@@ -31,8 +31,12 @@
   opacity: 1;
 }
 
+.wall-section label:hover{
+  cursor: pointer;
+}
+
 .wall-container{
-  margin-top: 8rem;
+  margin-top: 9rem;
   padding: var(--mb-5);
 }
 
@@ -50,6 +54,7 @@
 
 .tooltip{
   display: inline-block;
+  vertical-align: middle;
   text-align: center;
   margin-left: var(--mb-1);
   opacity: 0;
@@ -65,6 +70,16 @@
   cursor: pointer;
   opacity: 1;
 }
+
+.wall-element span{
+  font-size: inherit;
+}
+
+.wall-element span[contenteditable]:empty::before {
+  content: "Add some content";
+  color: gray;
+}
+
 
 /* Media queries */
 
