--- a/css/navBar.css
+++ b/css/navBar.css
@@ -9,6 +9,7 @@
 }
 
 .nav{
+  position: relative;
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
@@ -29,6 +30,8 @@
 }
 
 .nav__toggle{
+  position: fixed;
+  right: var(--mb-3);
   cursor: pointer;
   transition: all .3s ease;
 }
